hphp/test/slow/type_annotation/type_annotation3.php.expectf
Fatal error: Class undefined: C in %s on line 5
